# gpupixel

./: CMakeLists.txt  NEW_FILTERS_USAGE.md  demo_usage_example.cpp  demo_usage_example.mm
docs/: blend_filter_summary.md  blend_filter_usage.md  lookup_filter_usage.md
examples/: blend_filter_example.cpp  blend_filter_test.cmake  blend_filter_test.cpp  lookup_filter_example.cpp
examples/ios/GPUPixelApp/: VideoFilterController.mm
examples/ios/GPUPixelApp.xcodeproj/: project.pbxproj
examples/ios/GPUPixelApp/com.as.newtest 2025-08-14 11:15.15.667.xcappdata/: AppDataInfo.plist
examples/ios/GPUPixelApp/gpupixel.framework/: Info.plist  gpupixel
include/gpupixel/: gpupixel.h
include/gpupixel/filter/: beauty_face_unit_filter.h  eye_dero_filter.h  face_reshape_filter.h  head_accessory_filter.h  image_overlay_filter.h  lookup_filter.h  mask_overlay_filter.h  nose_dero_filter.h  portrait_seg_filter.h
src/: CMakeLists.txt
src/android/jni/: jni_gpupixel.cc  jni_source.cc
src/core/: gl_program.cc  gpupixel.h  gpupixel_context.cc  gpupixel_gl_include.h  gpupixel_program.cc
src/face_detector/: face_detector.cc
src/filter/: beauty_face_unit_filter.cc  blend_filter.cc  blend_filter.h  eye_dero_filter.cc  face_reshape_filter.cc  filter.cc  fisheye_filter.cc  fisheye_filter.h  head_accessory_filter.cc  image_overlay_filter.cc  lookup_filter.cc  lookup_filter.h  mask_overlay_filter.cc  nose_dero_filter.cc  portrait_seg_filter.cc  reshape_vert.glsl  tiezihi_filter.cc
src/sink/: sink_render.cc
src/source/: source_image.cc
src/utils/: logging.h  util.cc
